grammar.js
    script: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.block,
      $._statement,
      $._filler_line
    ),

    block: $ => prec.right(seq(
      repeat($._blank),
      seq(
        /\((&[+-]?)?/,
        $._terminator
      ),
      repeat(choice(
        $._statement,
        $._filler_line,
        $.block
      )),
      seq(
        repeat($._blank),
        ')',
        $._terminator
      ),
    )),

    _statement: $ => seq(
      repeat($._blank),
      choice(
        $.labeled_expression,
        $._non_labeled_statement
      )
    ),

    if_block: $ => seq(
      choice(
        seq(
          field('command', alias($._hll_var_if_command, $.identifier)),
          repeat1($._blank),
          field('condition', $._hll_expression),
        ),
        seq(
          field('command', alias(longAndShortForm('IF'), $.identifier)),
          repeat1($._blank),
          field('condition', $._expression)
        )
      ),
      seq(
        $._terminator,
        repeat($._filler_line),
        choice(
          $._statement,
          $.block
        ),
        repeat(seq(
          repeat($._filler_line),
          repeat($._blank),
          $.elif_block,
        )),
        optional(seq(
          repeat($._filler_line),
          repeat($._blank),
          $.else_block
        ))
      )
    ),

    elif_block: $ => seq(
      field('command', alias(longAndShortForm('ELSE'), $.identifier)),
      repeat1($._blank),
      field('command', alias(longAndShortForm('IF'), $.identifier)),
      repeat1($._blank),
      field('condition', $._expression),
      seq(
        $._terminator,
        repeat($._filler_line),
        choice(
          $._statement,
          $.block
        ),
      )
    ),

    while_block: $ => seq(
      choice(
        seq(
          field('command', alias(
            longAndShortForm('WHILE'), $.identifier)
          ),
          repeat1($._blank),
          field('condition', $._expression),
        ),
        seq(
          field('command', alias(token(seq(
            longAndShortForm('Var'),
            '.',
            longAndShortForm('WHILE')
          )), $.identifier)),
          repeat1($._blank),
          field('condition', $._hll_expression),
        )
      ),
      $._terminator,
      repeat($._filler_line),
      choice(
        $._statement,
        $.block
      )
    ),

    repeat_block: $ => choice(
      $._repeat_block_pre_condition_format,
      $._repeat_block_post_condition_format,
    ),

    _repeat_block_pre_condition_format: $ => seq(
      field('command', alias(longAndShortForm('RePeaT'), $.identifier)),
      choice(
        seq(
          repeat1($._blank),
          field('condition', $._expression),
          choice(
            $._statement,
            seq(
              $._terminator,
              repeat($._filler_line),
              choice(
                $._statement,
                $.block
              )
            )
          )
        ),
        seq(
          $._terminator,
          repeat($._filler_line),
          choice(
            $._statement,
            $.block
          ),
        )
      )
    ),

    _repeat_block_post_condition_format: $ => prec.dynamic(PREC.repeat_post_condition, seq(
      field('command', alias(longAndShortForm('RePeaT'), $.identifier)),
      choice(
        seq(
          $._terminator,
          repeat($._filler_line),
          choice(
            $._statement,
            $.block
          ),
          seq(
            repeat($._filler_line),
            field('command', alias(longAndShortForm('WHILE'), $.identifier)),
            repeat1($._blank),
            field('condition', $._expression),
            $._terminator
          )
        )
      )
    )),

    binary_expression: $ => choice(
      $._binary_expression,
      $._and_expression
    ),

    _binary_expression: $ => {
      const operators = [
        ['^^', PREC.logical_xor],
        ['||', PREC.logical_or],
        ['+', PREC.add_sub],
        ['-', PREC.add_sub],
        ['*', PREC.mul_div_mod],
        ['/', PREC.mul_div_mod],
        ['%', PREC.mul_div_mod],
        ['|', PREC.bitwise_or],
        ['^', PREC.bitwise_xor],
        ['==', PREC.relational],
        ['!=', PREC.relational],
        ['>', PREC.relational],
        ['>=', PREC.relational],
        ['<=', PREC.relational],
        ['<', PREC.relational],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['..', PREC.range],
        ['--', PREC.range],
        ['++', PREC.range]
      ];

      return choice(...operators.map(([op, pre]) => {
        return prec.left(pre, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression)
        ))
      }));
    },

    _and_expression: $ => {
      const operators = [
        ['&&', PREC.logical_and],
        ['&', PREC.bitwise_and]
      ];

      return choice(...operators.map(([op, pre]) => {
        return prec.left(pre, seq(
          field('left', $._expression),
          $._and_operator_pre_hook,
          field('operator', op),
          field('right', $._expression)
        ))
      }));
    },

    assignment_expression: $ => prec.right(seq(
      field('left', $._expression),
      repeat($._blank),
      field('operator', '='),
      repeat($._blank),
      field('right', $._expression)
    )),

    subroutine_call_expression: $ => seq(
      optional(/(::)?B::/),
      field('command', alias(longAndShortForm('GOSUB'), $.identifier)),
      repeat1($._blank),
      field('subroutine', $.identifier),
      optional(seq(
        repeat1($._blank),
        field('arguments', alias($._command_arguments, $.argument_list)),
      )),
      $._terminator
    ),

    macro: $ => prec.left(choice(
      seq(
        '&',
        alias($.identifier, 'name')
      ),
      seq(
        '&',
        '(',
        alias($.identifier, 'name'),
        ')'
      ),
      seq(
        '&',
        '{',
        alias($.identifier, 'name'),
        '}'
      )
    )),

    command_expression: $ => seq(
      optional(/(::)?B::/),
      choice(
        seq(
          $._var_command,
          $._terminator
        ),
        seq(
          $._host_command,
          $._terminator
        ),
        seq(
          $._other_command,
          $._terminator
        )
      )
    ),

    _host_command: $ => seq(
      field('command', alias($._host_command_with_default_format, $.identifier)),
      repeat1($._blank),
      field('arguments', alias($._host_command_argument_list_default_format, $.argument_list))
    ),

    _other_command: $ => seq(
      field('command', alias($._command_identifier, $.identifier)),
      optional(seq(
        repeat1($._blank),
        field('arguments', optional(alias($._command_arguments, $.argument_list))),
      ))
    ),

    _command_arguments: $ => seq(choice(
      seq(
        repeat(choice(
          seq(
            optional(seq(
              $._command_argument,
              repeat($._blank)
            )),
            ',',
            repeat($._blank)
          ),
          seq(
            $._command_argument,
            repeat1($._blank)
          )
        )),
        choice(
          seq(
            $._command_argument,
            optional(',')
          ),
          ','
        ),
        optional(seq(
          repeat1($._blank),
          repeat(seq(
            $.option_expression,
            repeat1($._blank)
          )),
          $.option_expression,
          repeat(seq(
            repeat1($._blank),
            choice(
              $.macro,
              $.macro_text_expansion
            )
          ))
        ))
      ),
      seq(
        repeat(seq(
          $.option_expression,
          repeat1($._blank)
        )),
        $.option_expression,
        repeat(seq(
          repeat1($._blank),
          choice(
            $.macro,
            $.macro_text_expansion
          )
        ))
      )
    )),

    _option_value: $ => prec(PREC.option_value, choice(
      $.binary_expression,
      $.call_expression,
      $.identifier,
      $.macro,
      $.macro_text_expansion,
      $.unary_expression,
      $._literal
    )),

    _parenthesized_option_value: $ => seq(
      '(',
      $._option_value,
      ')'
    ),

    option_expression: $ => prec(PREC.option, seq(
      '/',
      field('option', $.identifier),
      optional(seq(
        repeat1($._blank),
        field('value', choice(
          $._option_value,
          $._parenthesized_option_value
        ))
      ))
    )),

    format_expression: $ => seq(
      '%',
      field('value', choice(
        $.identifier,
        $.macro,
        $.macro_text_expansion
      )),
      repeat(seq(
        '.',
        field('value', choice(
          $.identifier,
          $.macro,
          $.macro_text_expansion
        ))
      ))
    ),

    argument_list: $ => seq(
      '(',
      optional(seq(
        $._expression,
        repeat(seq(
          repeat($._blank),
          ',',
          repeat($._blank),
          $._expression
        ))
      )),
      ')'
    ),


    /*****************************************
     * PRACTICE commands with HLL expressions
     *****************************************/

    _var_command: $ => choice(
      $._hll_var_command,
      $._hll_var_definition_command,
      $._non_hll_var_command
    ),

    _hll_var_if_command: $ => seq(
      longAndShortForm('Var'),
      '.',
      longAndShortForm('IF')
    ),

    _hll_expression: $ => choice(
      $._hll_number_literal,
      $.hll_assignment_expression,
      $.hll_binary_expression,
      $.hll_conditional_expression,
      $.hll_unary_expression,
      $.hll_update_expression,
      $.hll_cast_expression,
      $.hll_pointer_expression,
      $.hll_sizeof_expression,
      $.hll_subscript_expression,
      $.hll_call_expression,
      $.hll_field_expression,
      $.hll_string_literal,
      $.hll_char_literal,
      $.hll_parenthesized_expression,
      $.identifier,
      $.symbol
    ),

    // TRACE32 does not allow any spaces between function name
    // and opening parens
    hll_field_expression: $ => seq(
      prec(PREC.field, seq(
        field('argument', $._hll_expression),
        field('operator', choice(
          '.',
          '->'
        ))
      )),
      field('field', $._hll_field_identifier)
    ),

    // TRACE32 does neither allow any spaces between array name
    // and opening bracket nor index and brackets
    hll_char_literal: $ => seq(
      choice('L\'', 'u\'', 'U\'', 'u8\'', '\''),
      choice(
        $.hll_escape_sequence,
        alias(/[^\n']/, $.character),
      ),
      '\''
    ),

    hll_string_literal: $ => seq(
      choice('L"', 'u"', 'U"', 'u8"', '"'),
      repeat(choice(
        prec(1, /[^\\"\n]+/),
        $.hll_escape_sequence
      )),
      '"',
    ),

    hll_primitive_type: $ => token(choice(
      'bool',
      'char',
      'int',
      'float',
      'double',
      'void',
      'size_t',
      'ssize_t',
      'intptr_t',
      'uintptr_t',
      'charptr_t',
      ...[8, 16, 32, 64].map(n => `int${n}_t`),
      ...[8, 16, 32, 64].map(n => `uint${n}_t`),
      ...[8, 16, 32, 64].map(n => `char${n}_t`)
    )),

    hll_declaration: $ => seq(
      $._hll_declaration_specifiers,
      repeat($._blank),
      field('declarator', $._hll_declarator)
    ),

    _hll_declaration_specifiers: $ => seq(
      repeat(seq(
        $._hll_declaration_modifiers,
        repeat1($._blank)
      )),
      field('type', $._hll_type_specifier),
      repeat(seq(
        repeat1($._blank),
        $._hll_declaration_modifiers
      ))
    ),

    _hll_declarator: $ => choice(
      $.hll_pointer_declarator,
      $.hll_function_declarator,
      $.hll_array_declarator,
      $.hll_parenthesized_declarator,
      $.symbol
    ),

    hll_array_declarator: $ => prec.right(PREC.declarator, seq(
      '[',
      repeat(seq(
        repeat($._blank),
        $.hll_type_qualifier
      )),
      field('size', optional(seq(
        repeat($._blank),
        choice(
          $._hll_expression,
          '*'
        )
      ))),
      repeat($._blank),
      ']',
      repeat($._blank),
      field('declarator', $._hll_declarator)
    )),

    hll_escape_sequence: $ => token(prec(PREC.escape_sequence, seq(
      '\\',
      choice(
        /[^xuU]/,
        /\d{2,3}/,
        /x[0-9a-fA-F]{2,}/,
        /u[0-9a-fA-F]{4}/,
        /U[0-9a-fA-F]{8}/
      )
    ))),

    _hll_field_identifier: $ => alias($.identifier, $.hll_field_identifier),

    _address_expression: $ => choice(
      $.integer,
      $.macro,
      $.macro_text_expansion,
      alias($._address_binary_expression, $.binary_expression),
      $.call_expression,
      $._parenthesized_address_expression
    ),

    memory_space: $ => choice(
      // Machine identifier:::Memory space identifier::Memory segment identifier:
      seq(
        field('machine', $._address_expression),
        ':::',
        field('space', $._address_expression),
        '::',
        field('segment', $._address_expression),
        ':'
      ),
      seq(
        field('machine', $._address_expression),
        ':::',
        choice(
          seq(
            field('space', $._address_expression),
            '::'
          ),
          seq(
            field('segment', $._address_expression),
            ':'
          )
        )
      ),
      seq(
        field('space', $._address_expression),
        '::',
        field('segment', $._address_expression),
        ':'
      ),
      seq(
        field('machine', $._address_expression),
        ':::'
      ),
      seq(
        field('space', $._address_expression),
        '::'
      ),
      seq(
        field('segment', $._address_expression),
        ':'
      )
    ),

    access_class: $ => /[a-zA-Z][a-zA-Z0-9]*:/,

    address: $ => choice(
      seq(
        choice(
          seq(
            field('access', $.access_class),
            optional($.memory_space)
          ),
          $.memory_space
        ),
        field('location', $._address_expression)
      ),
      $.access_class
    ),

    integer: $ => choice(
      ...RE_BIN_HEX_NUMBER,
      seq(
        $._decimal_number_pre_hook,
        $._decimal_number
      )
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"&]+/,
        /""/,  // Escape sequence
        $._ampersand_char,
        $.macro,
      )),
      '"'
    ),

    character: $ => seq(
      "'",
      choice(
        /\\[^'\n]/,
        /[^\n]/,
      ),
      "'"
    ),

    _line_specifier: $ => token(choice(
      /\\[0-9]+(\\[0-9]+)?/,
      /\\[0-9]+\\[0-9]*\\[0-9]+/
    )),

    // Symbol names may omit earlier segments. After the first included segments
    // all later ones must be included. However, they may contain only the
    // separator.
    // Module names with single backslash are handled as internal C-style variables.
    // During parsing there is no way to differentiate. We reuse the token for
    // TRACE32 internal HLL variables to make the conflict obvious for the
    // generator.
    // The naming requirements for machine, program and module names are less strict
    // than those for function or method names.
    file_handle: $ => seq(
      '#',
      prec.right(repeat1(choice(
        /[0-9]+/,
        $.macro
      )))
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.call_expression,
      $.identifier,
      $.unary_expression,
      $.macro,
      $.macro_text_expansion,
      $._literal,
      $._parenthesized_expression,
      $._path_expression
    ),

    identifier: $ => /[0-9]*[A-Za-z_]\w*/,

    comment: $ => /[ \t]*(;|\/\/)(\\\r?\n|[^\n])*\n/,

    _filler_line: $ => choice(
      $._blank_line,
      $.comment
    ),

    _terminator: $ => choice(
      $.comment,
      $._blank_line
    ),
